# mt-metrix

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
configs/datasets/: surrey_general.yaml  surrey_health.yaml  surrey_legal.yaml  surrey_lowres_qe.yaml  surrey_tourism.yaml
configs/models/: comet.yaml  sacrebleu.yaml  tower.yaml
configs/runs/: example_quick.yaml  surrey_general_full_matrix.yaml  surrey_general_tower72b.yaml  surrey_general_tower_mistral.yaml  surrey_health_full_matrix.yaml  surrey_health_tower72b.yaml  surrey_health_tower_mistral.yaml  surrey_legal_all_comet.yaml  surrey_legal_all_tower.yaml  surrey_legal_cometkiwi.yaml  surrey_legal_full_matrix.yaml  surrey_legal_recommended.yaml  surrey_legal_tower72b.yaml  surrey_legal_tower_mistral.yaml  surrey_lowres_qe_cometkiwi.yaml  surrey_lowres_qe_cometqe_retry.yaml  surrey_lowres_qe_full_matrix.yaml  surrey_lowres_qe_tower72b.yaml  surrey_lowres_qe_xxl_a100.yaml  surrey_tourism_full_matrix.yaml  surrey_tourism_tower72b.yaml  surrey_tourism_tower_mistral.yaml
docs/: AISURREY.md  DESIGN.md  INDIC_QE_DATASETS.md  MODELS.md  PARAMETERS.md  SESSION_HANDOFF.md
docs/superpowers/plans/: 2026-04-23-queue-aware-cluster-probe.md  2026-04-24-prediction-space-routing.md
docs/superpowers/specs/: 2026-04-19-paper-matrix-design.md  2026-04-23-queue-aware-cluster-probe-design.md
examples/: 01_quick_start.md  02_add_more_models.md  03_reference_based_with_wmt.md  04_aisurrey_submission.md  05_adding_metrics.md  06_paper_matrix.md  README.md
scripts/: cluster_probe.py  download_models.sh  prepare_data.sh  run_mt_metrix.slurm  setup_cluster.sh  submit.sh  submit_aisurrey.sh
scripts/slurm_templates/: comet_small.sbatch  comet_xl.sbatch  comet_xxl.sbatch  common_header.sbatch  tower_13b.sbatch  tower_72b.sbatch  tower_7b.sbatch
src/mt_metrix/: __init__.py  cli.py  config.py  logging_utils.py  runner.py
src/mt_metrix/io/: __init__.py  datasets.py  schema.py  writers.py
src/mt_metrix/prompts/: __init__.py  gemba_da.py  gemba_mqm.py  (+1 more)
tests/: conftest.py  test_cli.py  test_cluster_probe.py  test_config.py  test_datasets.py  test_prompts.py  test_registry.py  test_runner_e2e.py  test_schema.py  test_scorers_comet_batch_downshift.py  test_scorers_comet_heuristic.py  test_scorers_comet_marian_preflight.py  test_scorers_comet_stub.py  test_scorers_sacrebleu.py  test_scorers_tower_unload.py  test_scorers_tower_vllm_kwargs.py  test_slurm.py  test_submit_freemem.bash  test_submit_prompt.bash  test_tabulate.py  test_tower_catalogue_defaults.py  test_writers.py
tests/fixtures/: tiny_no_ref.tsv  tiny_run_no_ref.yaml  tiny_run_with_ref.yaml  tiny_with_ref.tsv
(+10 files in other folders)
